@@ -183,6 +183,7 @@ gchar const *authors_text() {
         "Ben Cromwell\n"
         "Robert Crosbie\n"
         "Jon Cruz\n"
+        "Miłosz Dereżyński\n"
         "Daniel Díaz\n"
         "Larry Doolittle\n"
         "Tim Dwyer\n"
@@ -229,6 +230,7 @@ gchar const *authors_text() {
         "Juarez Rudsatz\n"
         "Xavier Conde Rueda\n"
         "Christian Schaller\n"
+        "Marco Scholten\n"
         "Tom von Schwerdtner\n"
         "Shivaken\n"
         "Boštjan Špetič\n"
@@ -244,78 +246,93 @@ gchar const *authors_text() {
         "Michael Wybrow\n"
         "Daniel Yacob\n"
         "David Yip\n"
-        "Masatake Yamato\n"
-        "Miłosz Dereżyński";
+        "Masatake Yamato";
 
     return text;
 }
 
 gchar const *translators_text() {
     static char const text[]=
+        "3ARRANO.com <3arrano@3arrano.com>, 2005.\n"
         "Adib Taraben <theadib@yahoo.com>, 2004.\n"
         "Alastair McKinstry <mckinstry@computer.org>, 2000.\n"
-        "Aleksandar Urošević <urke@users.sourceforge.net>\n"
+        "Aleksandar Urošević <urke@users.sourceforge.net>, 2004, 2005, 2006.\n"
         "Alessio Frusciante <algol@firenze.linux.it>, 2002, 2003.\n"
         "Alexandre Prokoudine <alexandre.prokoudine@gmail.com>, 2005.\n"
         "Alexey Remizov <alexey@remizov.pp.ru>, 2004.\n"
-        "Álvaro Lopes <alvieboy@alvie.com>, 2001, 2002\n"
+        "Álvaro Lopes <alvieboy@alvie.com>, 2001, 2002.\n"
         "Andreas Hyden <a.hyden@cyberpoint.se>, 2000.\n"
+        "Andrius Ramanauskas <knutux@gmail.com>, 2006.\n"
+        "Antônio Cláudio (LedStyle) <ledstyle@gmail.com>, 2006.\n"
+        "Amanpreet Singh Brar Alamwalia <apbrar@gmail.com>, 2005.\n"
         "Arman Aksoy <armish@linux-sevenler.de>, 2003.\n"
         "Arpad Biro <biro_arpad@yahoo.com>, 2004, 2005.\n"
-        "Benedikt Roth <Benedikt.Roth@gmx.net>, 2000\n"
+        "Benedikt Roth <Benedikt.Roth@gmx.net>, 2000.\n"
         "Boštjan Špetič <igzebedze@cyberpipe.org>, 2004, 2005.\n"
         "Brisa Francesco <fbrisa@yahoo.it>, 2000.\n"
         "bulia byak <buliabyak@users.sf.net>, 2004.\n"
+        "Chris jia <Chrisjiasl@gmail.com>, 2006.\n"
         "Christian Meyer <chrisime@gnome.org>, 2000-2002.\n"
         "Christian Neumair <chris@gnome-de.org>, 2002, 2003.\n"
         "Christian Rose <menthos@menthos.com>, 2000, 2001, 2002, 2003.\n"
         "Christophe Merlet (RedFox) <redfox@redfoxcenter.org>, 2000-2002.\n"
-        "Colin Marquardt <colin@marquardt-home.de>, 2004, 2005.\n"
-        "Daniel Díaz <yosoy@danieldiaz.org>, 2004\n"
-        "Александар Урошевић <urke@users.sourceforge.net>\n"
+        "Colin Marquardt <colin@marquardt-home.de>, 2004-2006.\n"
+        "Cédric Gemy <radar.map35@free.fr>, 2006.\n"
+        "Daniel Díaz <yosoy@danieldiaz.org>, 2004.\n"
         "Didier Conchaudron <conchaudron@free.fr>, 2003.\n"
-        "Duarte Loreto <happyguy_pt@hotmail.com> 2002,2003 (Maintainer)\n"
+        "Duarte Loreto <happyguy_pt@hotmail.com> 2002, 2003 (Maintainer).\n"
         "Fatih Demir <kabalak@gtranslator.org>, 2000.\n"
         "Francesc Dorca <f.dorca@filnet.es>, 2003. Traducció sodipodi.\n"
         "Francisco Javier F. Serrador <serrador@arrakis.es>, 2003.\n"
         "Francisco Xosé Vázquez Grandal <fxvazquez@arrakis.es>, 2001.\n"
         "Frederic Rodrigo <f.rodrigo free.fr>, 2004-2005.\n"
         "Ge'ez Frontier Foundation <locales@geez.org>, 2002.\n"
+        "Hizkuntza Politikarako Sailburuordetza <hizkpol@ej-gv.es>, 2005.\n"
+        "Iñaki Larrañaga <dooteo@euskalgnu.org>, 2006.\n"
         "Jörg Müller <jfm@ram-brand.de>, 2005.\n"
         "Jeroen van der Vegt <ajvdvegt (at) 123mail.org>, 2003, 2005.\n"
+        "Jonathan Ernst <jernst@users.sourceforge.net>, 2006.\n"
         "Jose Antonio Salgueiro Aquino <developer@telefonica.net>, 2003.\n"
-        "Josef Vybiral <josef.vybiral@gmail.com>, 2005.\n"
-        "Juarez Rudsatz <juarez@correio.com>, 2004\n"
+        "Josef Vybiral <josef.vybiral@gmail.com>, 2005-2006.\n"
+        "Juarez Rudsatz <juarez@correio.com>, 2004.\n"
         "Junichi Uekawa <dancer@debian.org>, 2002.\n"
-        "Kai Lahmann <kailahmann@01019freenet.de>, 2000\n"
+        "Kai Lahmann <kailahmann@01019freenet.de>, 2000.\n"
         "Karl Ove Hufthammer <karl@huftis.org>, 2004, 2005.\n"
         "Keld Simonsen <keld@dkuug.dk>, 2000-2001.\n"
+        "Kitae <bluetux@gmail.com>, 2006.\n"
         "Kjartan Maraas <kmaraas@gnome.org>, 2000-2002.\n"
         "Lauris Kaplinski <lauris@ariman.ee>, 2000.\n"
         "Luca Bruno <luca.br@uno.it>, 2005.\n"
         "Lucas Vieites Fariña<lucas@asixinformatica.com>, 2003-2005.\n"
         "Martin Srebotnjak, <miles@filmsi.net>, 2005.\n"
         "Masatake YAMATO <jet@gyve.org>, 2002.\n"
-        "Matiphas <matiphas _a_ free _point_ fr>, 2004.\n"
+        "Matiphas <matiphas _a_ free _point_ fr>, 2004-2006.\n"
         "Mattias Hultgren <mattias_hultgren@tele2.se>, 2005.\n"
-        "Maxim Dziumanenko <mvd@mylinux.com.ua>, 2004\n"
-        "Mitsuru Oka <oka326@parkcity.ne.jp>, 2001-2002.\n"
+        "Maxim Dziumanenko <mvd@mylinux.com.ua>, 2004.\n"
+        "Mitsuru Oka <oka326@parkcity.ne.jp>, 2002.\n"
         "Mufit Eribol <meribol@ere.com.tr>, 2000.\n"
+        "Przemysław Loesch <p_loesch@poczta.onet.pl>, 2005.\n"
         "Quico Llach <quico@softcatala.org>, 2000. Traducció sodipodi.\n"
         "Raymond Ostertag <raymond@linuxgraphic.org>, 2002-2003.\n"
+        "Serdar Soytetir <sendirom@gmail.com>, 2005.\n"
         "shivaken <shivaken@owls-nest.net>, 2004.\n"
         "Simos Xenitellis <simos@hellug.gr>, 2001.\n"
+        "Spyros Blanas <cid_e@users.sourceforge.net>, 2006.\n"
+        "Stefan Graubner <pflaumenmus92@gmx.net>, 2005.\n"
         "Takeshi Aihana <aihana@muc.biglobe.ne.jp>, 2000-2001.\n"
-        "Jose Antonio Salgueiro <developer@telefonica.net>.\n"
+        "Uwe Schöler <uschoeler@yahoo.de>, 2006.\n"
         "Valek Filippov <frob@df.ru>, 2000, 2003.\n"
         "Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>, 2003.\n"
-        "Vital Khilko <dojlid@mova.org>, 2003\n"
+        "Vital Khilko <dojlid@mova.org>, 2003.\n"
         "Vitaly Lipatov <lav@altlinux.ru>, 2002, 2004.\n"
-        "Wang Li <charlesw1234@163.com>, 2002\n"
+        "vonHalenbach <vonHalenbach@users.sourceforge.net>, 2005.\n"
+        "Wang Li <charlesw1234@163.com>, 2002.\n"
+        "Wei-Lun Chao <william.chao@ossii.com.tw>, 2006.\n"
         "Xavier Conde Rueda <xavi.conde@gmail.com>, 2004, 2005\n"
         "Yukihiro Nakai <nakai@gnome.gr.jp>, 2000, 2003.\n"
         "Yuri Syrota <rasta@renome.rovno.ua>, 2000.\n"
-        "Zdenko Podobný <zdpo@mailbox.sk>, 2003, 2004.";
+        "Yves Guillou <yvesguillou@users.sourceforge.net>, 2004.\n"
+        "Zdenko Podobný <zdpo@mailbox.sk>, 2003, 2004.\n";
 
     return text;
 }
